# translator

./: .gitignore  README.md  pyproject.toml  translator.py
components/: Translate.py  connection.py  deepl_key.py  deeplconnection.py  langeditor.py
images/: translator.icns
paraglidetranslator/: main.py
paraglidetranslator/components/: langeditor.py  open_dialog.py
