[tool.poetry]
name = "translator"
version = "0.1.0"
description = "Translator for Paraglide JSONS based on DeepL API"
authors = ["Lukas Rosenthaler <lukas.rosenthaler@unibas.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
